# ea-sync

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/cmd/: mod.rs  serve.rs  sync.rs
src/ea/: login.rs  mod.rs  timetable.rs
